After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 676647 - Opus RTP payloader is leaking memory (patch included)
Opus RTP payloader is leaking memory (patch included)
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
0.10.23
Other All
: Normal major
: 0.10.24
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-05-23 15:43 UTC by Carlos Rafael Giani
Modified: 2012-05-23 18:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Linear increase in heap usage observed while using the payloader; patch included (263 bytes, patch)
2012-05-23 15:43 UTC, Carlos Rafael Giani
committed Details | Review

Description Carlos Rafael Giani 2012-05-23 15:43:12 UTC
Created attachment 214776 [details] [review]
Linear increase in heap usage observed while using the payloader; patch included

Using the Opus RTP payloader causes memory leaks.
The following command will show a linear increase in heap usage:

   gst-launch audiotestsrc ! opusenc ! rtpopuspay ! fakesink

while this one doesn't:

   gst-launch audiotestsrc ! opusenc ! fakesink

The heap increase has been confirmed both with the top command and with valgrind massif.

The cause is a missing unref in the payloader's handle_buffer() function. The buffer passed to it as an argument is not unreferenced.

The attached patch fixes this. It calls gst_buffer_unref(buffer); right before the return line.
Comment 1 Carlos Rafael Giani 2012-05-23 15:45:50 UTC
Its the first time I submit a bug here. I was not sure of the version number; should it be the version number of GStreamer (which is 0.10.36) or gst-plugins-bad (which is 0.10.23) ?
Comment 2 Mark Nauwelaerts 2012-05-23 18:33:24 UTC
Filing against -bad the version number of -bad applies, so that is ok.

[0.10; already fixed in 0.11]
commit 2ad90f2d162e8cc3a981d2e77e926d6eec01919e
Author: Carlos Rafael Giani <dv@pseudoterminal.org>
Date:   Wed May 23 20:28:06 2012 +0200

    opuspay: plug buffer leak
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=676647