opuspay: plug buffer leak

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=676647